--- a/components/floatValue/floatValue.css
+++ b/components/floatValue/floatValue.css
@@ -9,7 +9,7 @@ intention-float-value span {
   text-align: right; 
 }
 
-intention-float-value input:read-only {
+intention-float-value input {
   width: 3rem;
 }
 
