--- a/components/flexPanel/flexPanel.css
+++ b/components/flexPanel/flexPanel.css
@@ -1,8 +1,10 @@
-intention-flex-panel {
+intention-flex-panel,
+.intention-flex-panel {
   display: flex; 
   flex-direction: row;
 }
 
-intention-flex-panel.vertical {
+intention-flex-panel.vertical,
+.intention-flex-panel.vertical {
   flex-direction: column;
 }
