--- a/components/widgets/dashboard/page/page.css
+++ b/components/widgets/dashboard/page/page.css
@@ -1,7 +1,7 @@
 intention-dashboard-page {
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: block;
 }
