--- a/components/core/flexPanel/flexPanel.css
+++ b/components/core/flexPanel/flexPanel.css
@@ -2,6 +2,7 @@ intention-flex-panel,
 .intention-flex-panel {
   display: flex; 
   flex-direction: row;
+  width: min-content;
 }
 
 intention-flex-panel.vertical,
