--- a/current/core/euler/euler.css
+++ b/current/core/euler/euler.css
@@ -1,6 +1,7 @@
-intention-euler intention-float-value {
+i-euler i-float-value {
   margin-bottom: 0.25rem;
 }
-intention-euler intention-float-value:last-child {
+
+i-euler i-float-value:last-child {
   margin-bottom: 0;
 }
