--- a/current/core/title/title.css
+++ b/current/core/title/title.css
@@ -1,6 +1,6 @@
-intention-title h1,
-intention-title h2,
-intention-title h3 {
+i-title h1,
+i-title h2,
+i-title h3 {
     padding: 0;
     margin: 0.5rem;
 }
